# SnowUI

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/: copilot-instructions.md
_codeql_build_dir/demos/demo_property_grid/: demo_property_grid
_codeql_build_dir/demos/demo_soil_dialog/: demo_soil_dialog
demos/demo_property_grid/: CMakeLists.txt  main.cpp
demos/demo_soil_dialog/: CMakeLists.txt  main.cpp
include/SnowUI/Core/: Dialog.h  Event.h  Widget.h  Window.h
include/SnowUI/Layout/: Layout.h
include/SnowUI/Render/: DrawCommand.h  GLFWUtils.h  IRenderBackend.h  OpenGLBackend.h  SkiaBackend.h
include/SnowUI/Widgets/: Button.h  Label.h  PropertyGrid.h
src/Core/: Dialog.cpp  Widget.cpp  Window.cpp
src/Layout/: Layout.cpp
src/Render/: GLFWUtils.cpp  OpenGLBackend.cpp  SkiaBackend.cpp
src/Widgets/: Button.cpp  Label.cpp  PropertyGrid.cpp
